--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: java
+language: minimal
 
 git:
   depth: false
@@ -13,8 +13,18 @@ arch:
   - amd64
   - arm64
 
+env:
+  global:
+    - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
+    - GRAVIS="$HOME/gravis"
+    - JDK="adopt@1.11.0-8"
+
+before_install:
+  - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
+  - source $GRAVIS/install-jdk
+
 install:
   - true
 
 script:
-  - sh ./gradlew check
+  - travis_retry sh ./gradlew check
