--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ env:
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
     - JDK="adopt@1.11.0-8"
+  matrix:
+    - JDK="adopt@1.11"
+    - JDK="adopt@1.8"
+    - JDK="adopt@1.14"
+    - JDK="adopt-openj9@1.11"
+    - JDK="adopt-openj9@1.8"
+    - JDK="adopt-openj9@1.14"
 
 before_install:
   - travis_retry git clone --depth 1 $GRAVIS_REPO $GRAVIS
