--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
   global:
     - GRAVIS_REPO="https://github.com/DanySK/Gravis-CI.git"
     - GRAVIS="$HOME/gravis"
-    - JDK="adopt@1.11.0-8"
+    - TERM="dumb" // evita che gradle stampi "lo schifo"
   matrix:
     - *reference_jdk
     - JDK="adopt@1.8"
