[skip-test] prova22

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,9 @@ stages:
   - Compile
   - Kotlin Style Check
   - Complete Check # in questo modo prima eseguo lo stage "check" poi lo stage "test"
-  - test
-  - name: Delivery # creo uno stage chiamato "Delivery" che si attiva solo se il nome del possessore del repository che ha triggerato i jobs, è il mio
+  - name: test
+    if: "commit_message !~ \[\s*skip(?: |-|\.)test\s*\].*" # in questo modo se qualcuno scrive un commit che nel testo del commit matcha la regex specificata, la fase di test viene saltata.
+  - name: Delivery # creo uno stage chiamato "Delivery" che si attiva solo se il nome del possessore del repository che ha triggerato i jobs, è il mio.
     if: repo = fedeOx/deleteme-lss
 
 _reference_machine: &reference_machine
